@@ -1,4 +1,7 @@
 New entries should be added at the top
+
+2005-06-27 backend_svg.py: write figure width, height as int, not float.
+           Update to fix some of the pychecker warnings - SC
   
 2005-06-23 Updated examples/agg_test.py to demonstrate curved paths
            and fills - JDH
